--- a/index.css
+++ b/index.css
@@ -64,8 +64,9 @@ b {
 
 #contactContainer {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 10px;
+  flex-direction: column;
 }
 
 #contactContainer > ul {
@@ -74,4 +75,13 @@ b {
   list-style: none;
   margin: 0;
   padding: 0;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 800px) {
+  
+  #contactContainer {
+    flex-direction: row;
+  }
+
 }
