--- a/index.css
+++ b/index.css
@@ -9,11 +9,16 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: 0;
+  align-items: center;
+}
+
+body > section {
+  overflow: scroll;
+  padding: 30px;
 }
 
 main, footer {
   max-width: 1440px;
-  padding: 0 30px;
   margin: 0 auto;
   width: 100%;
   box-sizing: border-box;
@@ -53,6 +58,7 @@ b {
   max-height: 150px;
   border-radius: 100%;
   overflow: hidden;
+  aspect-ratio: 1;
 }
 
 #imageContainer > img {
